fixed spacing getpro

--- a/react-app/src/components/GetPro/GetPro.css
+++ b/react-app/src/components/GetPro/GetPro.css
@@ -225,6 +225,7 @@
 
   .slide-info-l {
     width: 100%;
+    height: 100%;
   }
 
   .slide-info-l1 {
@@ -250,38 +251,48 @@
   }
   .info {
     font-size: 28px;
-    padding-top: 30px;
+    margin-top: 30px;
     padding-left: 0px;
     padding-right: 0px;
     width: 100%;
+    display: flex;
+    height: 100%;
   }
   .info-header {
     font-size: 15px;
+    margin-bottom: 5px;
   }
   .slide-info-right {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    height: 125px;
+    background-position: 100%;
   }
 
   .slide-info-right2 {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     height: 125px;
     width: 60%;
+    background-position: 100%;
   }
 
   .slide-info-right3 {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    margin-top: 10px;
     height: 125px;
     width: 60%;
+    background-position: 100%;
   }
 
   .slide-info-right4 {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     height: 125px;
     width: 60%;
+    background-position: 100%;
   }
   .slide-info-left {
     display: flex;
     text-align: center;
+    height: 100%;
   }
 
   .space-text {
@@ -294,7 +305,7 @@
   }
   .feature-card {
     width: 70%;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: 30px;
+    margin-top: 30px;
   }
 }
